# CV-Builder-MVP

./: .env  Dockerfile  README.md  pyproject.toml
app/: .dockerignore  .entrypoint.prod.sh  .env.sample  DockerFile  docker-compose.yml  nginx.conf
app/apps/audit/: middleware.py
app/apps/audit/migrations/: 0004_alter_requestlog_table.py
app/apps/cv/: urls.py
app/apps/cv/migrations/: 0002_alter_bodysection_options_alter_cv_options_and_more.py  (+1 more)
app/backend/: .gitignore  README.md  manage.py  pyproject.toml
app/backend/apps/audit/: admin.py  middleware.py  models.py  tests.py  urls.py  views.py
app/backend/apps/audit/migrations/: 0001_initial.py  0002_alter_audit_status.py  0002_audit_status.py  0003_rename_audit_requestlog.py  0005_alter_requestlog_duration.py
app/backend/apps/base/: models.py  urls.py  views.py
app/backend/apps/cv/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/backend/core/: context_processors.py  settings.py  urls.py
app/backend/fixtures/: cv.json
app/backend/src/core/: settings.py
app/backend/static/styles/: main.css
app/backend/staticfiles/styles/: main.css
app/core/: settings.py
app/cv-builder/: .gitignore  pyproject.toml
app/cv-builder/apps/audit/: admin.py  middleware.py  urls.py
app/cv-builder/apps/cv/: admin.py
app/cv-builder/apps/cv/migrations/: 0001_initial.py
app/cv-builder/core/: urls.py
app/cv-builder/templates/cv_detail/: detail.html
app/cv-builder/templates/index/: index.html
app/cv-builder/templates/request_logs/: list.html
app/templates/layouts/: base.html
(+8 files in other folders)
